2015-07-08  Antti Koivisto  <antti@apple.com>

        Network Cache: Don't open files in main thread
        https://bugs.webkit.org/show_bug.cgi?id=146722

        Reviewed by Chris Dumez.

        While we use open() with O_NONBLOCK profiling indicates that we still may block up to 5ms under the syscall in some case.

        * NetworkProcess/cache/NetworkCacheStorage.cpp:
        (WebKit::NetworkCache::Storage::dispatchReadOperation):

            Dispatch read operation to a concurrent queue.
            With this we can also eliminate the separate dispatch() for body blob read.

2015-07-08  Sungmann Cho  <sungmann.cho@navercorp.com>

        [Unix] Remove unused local variable from Connection::sendOutgoingMessage().
        https://bugs.webkit.org/show_bug.cgi?id=146713

        Reviewed by Csaba Osztrogonác.

        * Platform/IPC/unix/ConnectionUnix.cpp:
        (IPC::Connection::sendOutgoingMessage):

2015-07-07  Tim Horton  <timothy_horton@apple.com>

        Occasional null deref in the CA callback in flushLayers()
        https://bugs.webkit.org/show_bug.cgi?id=146700
        <rdar://problem/21668754>

        Reviewed by Simon Fraser.

        * WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
        (WebKit::TiledCoreAnimationDrawingArea::flushLayers):
        * WebProcess/WebPage/mac/RemoteLayerTreeDrawingArea.mm:
        (WebKit::RemoteLayerTreeDrawingArea::flushLayers):
        Make sure we keep the WebPage alive, and null-check the potentially null
        WebCore objects (Page and Frame).

2015-07-06  Matt Rajca  <mrajca@apple.com>

        Media Session: propagate metadata changes to UI clients
        https://bugs.webkit.org/show_bug.cgi?id=146660

        Reviewed by Tim Horton.

        * CMakeLists.txt: Added WebMediaSessionMetadata and WKMediaSessionMetadata.
        * Shared/API/APIObject.h: Added a media session metadata type.
        * Shared/API/c/WKBase.h: