@@ -3,6 +3,18 @@
         Network Cache: Don't open files in main thread
         https://bugs.webkit.org/show_bug.cgi?id=146722
 
+        Follow-up.
+
+        * NetworkProcess/cache/NetworkCacheStorage.cpp:
+        (WebKit::NetworkCache::Storage::dispatchReadOperation):
+
+            Accessing m_bodyFilter is technically not thread safe so keep it in main thread.
+
+2015-07-08  Antti Koivisto  <antti@apple.com>
+
+        Network Cache: Don't open files in main thread
+        https://bugs.webkit.org/show_bug.cgi?id=146722
+
         Reviewed by Chris Dumez.
 
         While we use open() with O_NONBLOCK profiling indicates that we still may block up to 5ms under the syscall in some case.
